--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,7 @@ parse:
 sphinx:
   config:
     bibtex_reference_style: author_year
+    mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-svg.js
     mathjax3_config:
       TeX:
         Macros:
