--- a/_toc.yml
+++ b/_toc.yml
@@ -14,6 +14,7 @@ parts:
       - file: subsets_Polish.md
       - file: measure.md
       - file: choice.md
+      # - file: effectiveBorel.md
   - caption: Reference
     chapters:
       - file: bibliography
