images of Borel sets

--- a/_toc.yml
+++ b/_toc.yml
@@ -16,6 +16,7 @@ parts:
       - file: choice.md
       - file: codingBorel.md
       - file: structureBorel.md
+      - file: imagesBorel.md
   - caption: Reference
     chapters:
       - file: bibliography
