finished Shoenfield absoluteness

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@
 title: Descriptive Set Theory
 author: Jan Reimann
 logo: PS_VER2_RGB_2C.png
+only_build_toc_files: true
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
