--- a/myst.yml
+++ b/myst.yml
@@ -2,6 +2,11 @@ version: 1
 project:
   title: Descriptive Set Theory
   short_title: Descriptive Set Theory
+  # authors: 
+  #   name: Jan Reimann
+    # affiliation: Penn State University
+  license: CC-BY-4.0
+  open_access: true
   github: https://github.com/28left/descriptive_set_theory
   numbering: false
   math:
@@ -25,6 +30,10 @@ project:
       macro: \mathsf{ZFC}
     \AC:
       macro: \mathsf{AC}
+    \DC:
+      macro: \mathsf{DC}
+    \VL:
+      macro: \mathsf{V=L}
     \eps:
       macro: \varepsilon
     \Cant:
@@ -57,6 +66,7 @@ project:
     '\Ord': '\operatorname{Ord}'
     '\Norm': '\parallel \! #1 \!\parallel'
     '\W': '\Op{W}'
+    '\V': '\Op{V}'
     '\WF': '\Op{WF}'
     '\WOrd': '\Op{WOrd}'
     '\Ury': '\mathbb{U}'
@@ -68,6 +78,9 @@ project:
     '\Pow': '\mathcal{P}'
     '\Tup': '\langle #1 \rangle'
     '\Qu': '\mathsf{Q}'
+    '\GN': '\ulcorner #1 \urcorner'
+    '\Const': '\underline{#1}'
+
 
 
   id: 23743a9d-b9bd-4e14-9b3c-6dd8e5af58b8
@@ -121,6 +134,7 @@ site:
     logo: PSU_VER2_RGB_2C.png
   short_title: Descriptive Set Theory
   template: book-theme
+
   #  nav:
   #    - title: Intro
   #      url: /intro
