--- a/myst.yml
+++ b/myst.yml
@@ -8,7 +8,8 @@ project:
   license: CC-BY-4.0
   open_access: true
   github: https://github.com/28left/descriptive_set_theory
-  numbering: false
+  numbering: 
+    headings: true
   exports:
   - format: pdf
     template: plain_latex_book
